tests/paczka1/fuzzy1/58828472.err
Error in line 10: oculn A890 97,8
Error in line 12: j7GEvsRQ S146 70,8
Error in line 25: t1sT4u S174 87,40
Error in line 17: j7GEvsRQ A890 28,5
Error in line 29: S174 S146 14,9
